--- a/extStyle.css
+++ b/extStyle.css
@@ -3,19 +3,49 @@
     height: 21px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  /* margin: 0; */
+}
+
 .random-pick-button{
     margin-bottom: 10px;
     width: 20px;
+    cursor: pointer
 }
 
 .feature-menu{
     position: absolute;
     width: 300px;
-    height: 200px;
-    background: black;
+    background: white;
     z-index: 100;
-    top: 20px;
-    left: -30px;
+    top: 25px;
+    left: 0px;
+    border-radius: 10px;
+    border: 0.5px solid rgba(0, 0, 0, 0.4);
+    display: flex;
+    padding: 15px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.control-button-container{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    margin-top: 5px;
+}
+
+.feature{
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.rating-input{
+    width: 70px;
 }
 
 
