--- a/extStyle.css
+++ b/extStyle.css
@@ -21,7 +21,7 @@ input::-webkit-inner-spin-button {
     background: white;
     z-index: 100;
     top: 25px;
-    left: 0px;
+    right: -150px;
     border-radius: 10px;
     border: 0.5px solid rgba(0, 0, 0, 0.4);
     display: flex;
@@ -29,6 +29,10 @@ input::-webkit-inner-spin-button {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+}
+
+.invis{
+    display: none;
 }
 
 .control-button-container{
@@ -45,7 +49,20 @@ input::-webkit-inner-spin-button {
 }
 
 .rating-input{
-    width: 70px;
+    text-align: center;
+    width: 50px;
 }
+
+.loading-overlay{
+    background: rgba(128, 128, 128, 0.466);
+    display: flex;
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
 
 
